tests/typecheck/fail/dict_invalid_key.tw
// Dict key must be Int or String — Bool is not allowed
fn bad(x: Dict<Bool, Int>) Int {
    x["key"]
}
